--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=userervice
-spring.jpa.hibernate.ddl-auto=update
+spring.application.name=userService
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userService
 spring.datasource.username= user1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.flyway.baseline-on-migrate=true
 #spring.jpa.show-sql: true
