--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=userService
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userService
 spring.datasource.username= user1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 server.port=8181
 spring.flyway.baseline-on-migrate=true
+logging.level.org.springframework.security.* = TRACE;
 #spring.jpa.show-sql: true
